--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,43 @@
-# Frontend Environment Variables
+# Premium SaaS Environment Configuration
+
+# API Configuration
 VITE_API_URL=http://localhost:8000
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Firebase Configuration
+# Firebase Configuration (Enhanced)
 VITE_FIREBASE_API_KEY=your_firebase_api_key
 VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
 VITE_FIREBASE_STORAGE_BUCKET=your_project.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Premium AI Features
+VITE_ENABLE_OFFLINE_MODE=true
+VITE_ENABLE_GEMMA_OFFLINE=true
+VITE_AI_CACHE_TTL=7200000
+VITE_MAX_AI_RETRIES=3
+
+# Analytics & Monitoring
+VITE_ENABLE_ANALYTICS=true
+VITE_ENABLE_PERFORMANCE_MONITORING=true
+VITE_ENABLE_REMOTE_CONFIG=true
+
+# Development Settings
+VITE_ENV=development
+VITE_DEBUG=true
+VITE_USE_EMULATORS=false
+
+# Storage Configuration
+VITE_MAX_CACHE_SIZE=52428800
+VITE_CACHE_TTL=86400000
+VITE_ENABLE_ENCRYPTION=false
+VITE_AUTO_CLEANUP_EXPIRED=true
+
+# Feature Flags
+VITE_ENABLE_AUTO_SAVE=true
+VITE_ENABLE_EXPORT_IMPORT=true
+VITE_ENABLE_REAL_TIME_SYNC=true
+VITE_ENABLE_OFFLINE_FIRST=true
+VITE_ENABLE_PWA=true
