--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
+    "build:premium": "npm run type-check && npm run build && npm run test:coverage",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview --host",
@@ -32,7 +33,12 @@
     "docker:run": "docker run -p 3000:80 edulearn-frontend",
     "clean": "rm -rf dist node_modules/.vite",
     "start": "npm run preview",
-    "postinstall": "npm run type-check"
+    "postinstall": "npm run type-check",
+    "firebase:emulators": "firebase emulators:start",
+    "firebase:deploy": "npm run build:premium && firebase deploy",
+    "setup": "copy .env.example .env && echo Please configure your .env file with API keys",
+    "health": "npm run type-check && npm run lint",
+    "prepare": "echo Project setup complete"
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.2",
@@ -61,12 +67,7 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "react-intersection-observer": "^9.5.3",
-    "react-use": "^17.4.2",
-    "usehooks-ts": "^2.9.1",
     "react-error-boundary": "^4.0.11",
-    "react-lazyload": "^3.2.0",
-    "react-virtualized-auto-sizer": "^1.0.20",
-    "react-window": "^1.8.8",
     "@tanstack/react-query": "^5.8.4",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
@@ -78,11 +79,6 @@
     "react-chartjs-2": "^5.2.0",
     "recharts": "^2.8.0",
     "lottie-react": "^2.4.0",
-    "react-spring": "^9.7.3",
-    "use-gesture": "^10.3.0",
-    "react-transition-group": "^4.4.5",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-sortable-hoc": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^4.5.7"
   },
@@ -93,9 +89,6 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/react-window": "^1.8.8",
-    "@types/react-transition-group": "^4.4.10",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/node": "^20.10.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
