modified:   .env.example 	new file:   .nvmrc 	new file:   PROJECT_FINAL_STATUS.md 	new file:   PROJECT_STATUS.json 	new file:   QUICKSTART.md 	modified:   README.md 	new file:   README_FINAL.md 	modified:   eslint.config.js 	modified:   package-lock.json 	modified:   package.json 	modified:   src/components/animations/AnimatedIcons.tsx 	modified:   src/components/animations/MotionWrapper.tsx 	modified:   src/components/animations/PremiumLoader.tsx 	modified:   src/components/animations/PremiumMotion.tsx 	modified:   src/components/career/CareerGuidanceChatbot.tsx 	modified:   src/components/converter/PDFConverter.tsx 	modified:   src/components/dashboard/StudyPatternAnalysis.tsx 	modified:   src/components/dev/BreakpointIndicator.tsx 	modified:   src/components/layout/Navbar.tsx 	modified:   src/components/layout/PageLayout.tsx 	modified:   src/components/layout/ResponsiveLayout.tsx 	modified:   src/components/layout/Sidebar.tsx 	modified:   src/components/materials/StudyMaterials.tsx 	modified:   src/components/premium/PremiumAIChat.tsx 	modified:   src/components/quiz/QuizComponent.tsx 	modified:   src/components/seo/SEOHead.tsx 	modified:   src/components/ui/Button.tsx 	modified:   src/components/ui/Card.tsx 	modified:   src/components/ui/Input.tsx 	modified:   src/components/ui/Loading.tsx 	modified:   src/components/ui/LoadingSpinner.tsx 	modified:   src/components/ui/StatCard.tsx 	modified:   src/components/ui/ThemeToggle.tsx 	modified:   src/components/ui/Toast.tsx 	modified:   src/components/ui/Typography.tsx 	modified:   src/context/ThemeContext.tsx 	modified:   src/pages/ChatPage.tsx 	modified:   src/pages/ChatPage_new.tsx 	modified:   src/pages/Dashboard.tsx 	modified:   src/pages/StudyAnalysis.tsx 	modified:   src/vite-env.d.ts 	modified:   tsconfig.app.json

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-# Premium SaaS Environment Configuration
+# ======================================
+# 🎓 AI Educational Platform - Environment Variables
+# ======================================
+# Copy this file to .env and fill in your actual values
+# Get API keys from: https://aistudio.google.com/ and https://console.firebase.google.com/
 
-# API Configuration
-VITE_API_URL=http://localhost:8000
+# ======================================
+# 🤖 AI Configuration (REQUIRED)
+# ======================================
+# Get from: https://aistudio.google.com/
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Firebase Configuration (Enhanced)
+# ======================================
+# 🔥 Firebase Configuration (REQUIRED)
+# ======================================
+# Get from: https://console.firebase.google.com/ > Project Settings > General > Your apps
 VITE_FIREBASE_API_KEY=your_firebase_api_key
 VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
@@ -13,31 +22,46 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Premium AI Features
+# ======================================
+# 🚀 Feature Flags (OPTIONAL)
+# ======================================
 VITE_ENABLE_OFFLINE_MODE=true
 VITE_ENABLE_GEMMA_OFFLINE=true
-VITE_AI_CACHE_TTL=7200000
-VITE_MAX_AI_RETRIES=3
-
-# Analytics & Monitoring
 VITE_ENABLE_ANALYTICS=true
 VITE_ENABLE_PERFORMANCE_MONITORING=true
 VITE_ENABLE_REMOTE_CONFIG=true
 
-# Development Settings
+# ======================================
+# 🛠️ Development Settings (OPTIONAL)
+# ======================================
 VITE_ENV=development
 VITE_DEBUG=true
 VITE_USE_EMULATORS=false
 
-# Storage Configuration
+# ======================================
+# 💾 Storage Configuration (OPTIONAL)
+# ======================================
 VITE_MAX_CACHE_SIZE=52428800
 VITE_CACHE_TTL=86400000
 VITE_ENABLE_ENCRYPTION=false
 VITE_AUTO_CLEANUP_EXPIRED=true
 
-# Feature Flags
-VITE_ENABLE_AUTO_SAVE=true
-VITE_ENABLE_EXPORT_IMPORT=true
-VITE_ENABLE_REAL_TIME_SYNC=true
-VITE_ENABLE_OFFLINE_FIRST=true
-VITE_ENABLE_PWA=true
+# ======================================
+# 🎯 AI Model Configuration (OPTIONAL)
+# ======================================
+VITE_AI_CACHE_TTL=7200000
+VITE_MAX_AI_RETRIES=3
+VITE_AI_TIMEOUT=30000
+
+# ======================================
+# 📊 Analytics & Monitoring (OPTIONAL)
+# ======================================
+VITE_ENABLE_ERROR_TRACKING=true
+VITE_ENABLE_USER_ANALYTICS=true
+VITE_ENABLE_PERFORMANCE_METRICS=true
+
+# ======================================
+# 🔒 Security (OPTIONAL)
+# ======================================
+VITE_ENABLE_CSP=true
+VITE_ENABLE_SECURE_HEADERS=true
