--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,19 @@
 # ======================================
 # 🤖 AI Configuration (REQUIRED)
 # ======================================
-# Get from: https://aistudio.google.com/
+# Primary AI: Get from https://aistudio.google.com/
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Secondary AI: Same key works for Gemma 3 API
+VITE_GEMMA_API_KEY=your_gemini_api_key_here
+
+# Local AI: Ollama endpoint (if running locally)
+VITE_OLLAMA_ENDPOINT=http://localhost:11434
+
+# AI Preferences
+VITE_PREFERRED_AI_MODEL=auto
+VITE_PREFERRED_AI_PROVIDER=auto
+VITE_ENABLE_AI_FALLBACK=true
 
 # ======================================
 # 🔥 Firebase Configuration (REQUIRED)
