--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "edu-learn-platform",
+  "name": "eduflow-platform",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "description": "A premium AI-powered educational platform with responsive design and premium animations",
+  "description": "EduFlow - A premium AI-powered educational platform with responsive design and premium animations",
   "keywords": [
+    "eduflow",
     "education",
     "ai",
     "react",
@@ -13,15 +14,15 @@
     "premium",
     "framer-motion"
   ],
-  "author": "EduLearn Team",
+  "author": "EduFlow Team",
   "license": "MIT",
-  "homepage": "https://github.com/yourusername/edu-learn-platform",
+  "homepage": "https://github.com/msrishav-28/eduflow-platform",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/edu-learn-platform.git"
+    "url": "https://github.com/msrishav-28/eduflow-platform.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/edu-learn-platform/issues"
+    "url": "https://github.com/msrishav-28/eduflow-platform/issues"
   },
   "scripts": {
     "dev": "vite --host",
