Remove documentation txt files from repository
- Removed ESSENTIAL_FILES_FOR_AI_HANDOVER_UPDATED.txt from git tracking
- Removed PROJECT_HANDOVER_DOCUMENTATION_UPDATED.txt from git tracking
- Updated .gitignore to exclude future handover documentation files
- Files remain available locally for reference

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,8 @@ pids/
 *.zip
 *.tar.gz
 *.rar
+
+# Documentation files (keep local only)
+*HANDOVER*.txt
+PROJECT_HANDOVER_DOCUMENTATION*.txt
+ESSENTIAL_FILES_FOR_AI_HANDOVER*.txt
