--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,8 @@ pids/
 *HANDOVER*.txt
 PROJECT_HANDOVER_DOCUMENTATION*.txt
 ESSENTIAL_FILES_FOR_AI_HANDOVER*.txt
+
+# Documentation files (keep local only)
+*HANDOVER*.txt
+PROJECT_HANDOVER_DOCUMENTATION*.txt
+ESSENTIAL_FILES_FOR_AI_HANDOVER*.txt
